src/finalProject/test.java
/* test.java */
/* Generated By:JavaCC: Do not edit this line. test.java */
package finalProject;
import Nodes.*;

public class test implements testConstants {
  public static void main(String [] args)
  {

     try {
      test parser = new test(System.in);
      treeNode  n = parser.start();
      n.execute();
    }
    catch(Exception e) { System.out.print(e.getMessage());}

  }

  static final public treeNode start() throws ParseException {treeNode i;
  blockNode b = new blockNode();
    i = block();
b.addChild(i);
    jj_consume_token(ENDPROGRAM);
{if ("" != null) return b;}
    throw new Error("Missing return statement in function");
}

  static final public printNode print() throws ParseException {printNode p = new printNode();
  Token t1, t2,t3;
    valueNode s1, s2,s3;
    jj_consume_token(PRINT);
    jj_consume_token(OPEN);
    if (jj_2_1(3)) {
      t1 = jj_consume_token(INT);
s1 = new intNode(t1.image); p.addChild(s1);
    } else if (jj_2_2(3)) {
      t1 = jj_consume_token(VAR);
s1 = new varNode(t1.image); p.addChild(s1);
    } else if (jj_2_3(3)) {
      t1 = jj_consume_token(STR);
s1 = new stringNode(t1.image); p.addChild(s1);
    } else if (jj_2_4(3)) {
      t1 = jj_consume_token(BOOL);
s1 = new boolNode(t1.image); p.addChild(s1);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_1:
    while (true) {
      if (jj_2_5(3)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(PLUS);
      if (jj_2_6(3)) {
        t2 = jj_consume_token(INT);
s2 = new intNode(t2.image); p.addChild(s2);
      } else if (jj_2_7(3)) {
        t2 = jj_consume_token(VAR);
s2 = new varNode(t2.image); p.addChild(s2);
      } else if (jj_2_8(3)) {
        t2 = jj_consume_token(STR);
s2 = new stringNode(t2.image); p.addChild(s2);
      } else if (jj_2_9(3)) {
        t2 = jj_consume_token(BOOL);
s2 = new boolNode(t2.image); p.addChild(s2);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(CLOSE);
    jj_consume_token(END);
{if ("" != null) return p;}
    throw new Error("Missing return statement in function");
}

  static final public blockNode block() throws ParseException {blockNode b = new blockNode();
  treeNode i;
    label_2:
    while (true) {
      if (jj_2_10(3)) {
        i = declareSt();
      } else if (jj_2_11(3)) {
        i = while_fun();
      } else if (jj_2_12(3)) {
        i = if_fun();
      } else if (jj_2_13(3)) {
        i = assignSt();
      } else if (jj_2_14(3)) {
        i = switchSt();
      } else if (jj_2_15(3)) {
        i = print();
      } else if (jj_2_16(3)) {
        i = incress_decress();
      } else if (jj_2_17(3)) {
        i = forSt();
      } else if (jj_2_18(3)) {
        i = doWhileSt();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
b.addChild(i);
      if (jj_2_19(3)) {
        ;
      } else {
        break label_2;
      }
    }
{if ("" != null) return b;}
    throw new Error("Missing return statement in function");
}

  static final public ifNode if_fun() throws ParseException {ifNode i = new ifNode();
 condNode c;
 blockNode b;
 boolean bol;
System.out.println("vars2:"+declareNode.variables);
    jj_consume_token(IF);
    c = condition();
    jj_consume_token(41);
    b = block();
    jj_consume_token(42);
if((boolean)c.execute()) {
i.addChild(c);

  i.addChild(b); }
    label_3:
    while (true) {
      if (jj_2_20(3)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(ELSEIF);
      c = condition();
      jj_consume_token(41);
      b = block();
      jj_consume_token(42);
    }
if((boolean)c.execute()) {
        i.addChild(c);
        i.addChild(b); }
    if (jj_2_21(3)) {
      jj_consume_token(ELSE);
      jj_consume_token(41);
      b = block();
      jj_consume_token(42);
    } else {
      ;
    }
{if ("" != null) return i;}
    throw new Error("Missing return statement in function");
}

  static final public whileNode while_fun() throws ParseException {condNode c;
        blockNode b;
        whileNode wh= new whileNode();
    jj_consume_token(WHILE);
    c = condition();
    jj_consume_token(41);
    b = block();
    jj_consume_token(42);
wh.addChild(c);
  wh.addChild(b);
  {if ("" != null) return wh;}
    throw new Error("Missing return statement in function");
}

  static final public condNode condition() throws ParseException {condNode c = new condNode();

  stringNode s,s4;

  valueNode s1, s2;

  Token t1,t2 , t3;
    jj_consume_token(OPEN);
    if (jj_2_22(3)) {
      t1 = jj_consume_token(INT);
s1 = new intNode(t1.image); c.addChild(s1);
    } else if (jj_2_23(3)) {
      t1 = jj_consume_token(VAR);
s4 = new stringNode(t1.image); c.addChild(s4);
    } else if (jj_2_24(3)) {
      t1 = jj_consume_token(STR);
s1 = new stringNode(t1.image); c.addChild(s1);
    } else if (jj_2_25(3)) {
      t1 = jj_consume_token(BOOL);
s1 = new boolNode(t1.image); c.addChild(s1);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    t3 = jj_consume_token(COMPAREOP);
s=new stringNode(t3.image);c.addChild(s);
    if (jj_2_26(3)) {
      t2 = jj_consume_token(INT);
s2 = new intNode(t2.image); c.addChild(s2);
    } else if (jj_2_27(3)) {
      t2 = jj_consume_token(VAR);
s4 = new stringNode(t2.image); c.addChild(s4);
    } else if (jj_2_28(3)) {
      t2 = jj_consume_token(STR);
s2 = new stringNode(t2.image); c.addChild(s2);
    } else if (jj_2_29(3)) {
      t2 = jj_consume_token(BOOL);
s2 = new boolNode(t2.image); c.addChild(s2);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_4:
    while (true) {
      if (jj_2_30(3)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(LOGICOP);
      t1 = jj_consume_token(INT);
      t3 = jj_consume_token(COMPAREOP);
      t2 = jj_consume_token(INT);
    }
    jj_consume_token(CLOSE);
{if ("" != null) return c;}
    throw new Error("Missing return statement in function");
}

  static final public declareNode declareSt() throws ParseException {declareNode d=new declareNode();
 stringNode x;
 valueNode c;
 valueNode v=new valueNode();
 Token t,t1,t2,t3=null,t4;
    jj_consume_token(DTYPE);
    t1 = jj_consume_token(VAR);
    if (jj_2_36(3)) {
      t2 = jj_consume_token(EQ);
      if (jj_2_31(3)) {
        t3 = jj_consume_token(INT);
      } else if (jj_2_32(3)) {
        t3 = jj_consume_token(DOUBLE);
      } else if (jj_2_33(3)) {
        t3 = jj_consume_token(STR);
      } else if (jj_2_34(3)) {
        t3 = jj_consume_token(BOOL);
      } else if (jj_2_35(3)) {
        t3 = jj_consume_token(READ);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    jj_consume_token(END);
if(t3!=null) {
  x = new stringNode(t1.image);
  c = new valueNode(t3.image); }
  else {
   x = new stringNode(t1.image);
  c = new valueNode(0); }

                d.addChild(x);
                d.addChild(c);

                {if ("" != null) return d;}
    throw new Error("Missing return statement in function");
}

  static final public assignNode assignSt() throws ParseException {assignNode a = new assignNode();
  stringNode x;
  valueNode c;
  valueNode v=new valueNode();
  Token t1,t3;
    t1 = jj_consume_token(VAR);
    jj_consume_token(EQ);
    if (jj_2_37(3)) {
      t3 = jj_consume_token(INT);
    } else if (jj_2_38(3)) {
      t3 = jj_consume_token(DOUBLE);
    } else if (jj_2_39(3)) {
      t3 = jj_consume_token(STR);
    } else if (jj_2_40(3)) {
      t3 = jj_consume_token(BOOL);
    } else if (jj_2_41(3)) {
      t3 = jj_consume_token(READ);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(END);
x = new stringNode(t1.image);
    c = new valueNode(t3.image);

                a.addChild(x);
                a.addChild(c);

                {if ("" != null) return a;}
    throw new Error("Missing return statement in function");
}

  static final public modificationNode incress_decress() throws ParseException {modificationNode  m = new modificationNode ();
    stringNode s1,s2;
    Token t1,t2;
    t1 = jj_consume_token(VAR);
    if (jj_2_42(3)) {
      t2 = jj_consume_token(INCRESS);
    } else if (jj_2_43(3)) {
      t2 = jj_consume_token(DECRESS);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(END);
s1 = new stringNode(t1.image);
       s2 = new stringNode(t2.image);

       m.addChild(s1);
       m.addChild(s2);

       {if ("" != null) return m;}
    throw new Error("Missing return statement in function");
}

  static final public switchNode switchSt() throws ParseException {switchNode sn=new switchNode(); Token t1,t2;
blockNode bl; valueNode s2; varNode v,v1;
    jj_consume_token(SWITCH);
    jj_consume_token(OPEN);
    t1 = jj_consume_token(VAR);
v1=new varNode(t1.image); sn.addChild(v1);
    jj_consume_token(CLOSE);
    jj_consume_token(41);
    label_5:
    while (true) {
      jj_consume_token(CASE);
      if (jj_2_44(3)) {
        t2 = jj_consume_token(INT);
s2 = new intNode(t2.image); sn.addChild(s2);
      } else if (jj_2_45(3)) {
        t2 = jj_consume_token(VAR);
v = new varNode(t2.image); sn.addChild(v);
      } else if (jj_2_46(3)) {
        t2 = jj_consume_token(STR);
s2 = new stringNode(t2.image); sn.addChild(s2);
      } else if (jj_2_47(3)) {
        t2 = jj_consume_token(BOOL);
s2 = new boolNode(t2.image); sn.addChild(s2);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(43);
      bl = block();
sn.addChild(bl);
      jj_consume_token(BREAK);
      jj_consume_token(END);
      if (jj_2_48(3)) {
        ;
      } else {
        break label_5;
      }
    }
    jj_consume_token(DEFAUL);
    jj_consume_token(43);
    bl = block();
sn.addChild(bl);
    jj_consume_token(BREAK);
    jj_consume_token(END);
    jj_consume_token(42);
{if ("" != null) return sn;}
    throw new Error("Missing return statement in function");
}

  static final public forNode forSt() throws ParseException {forNode fr = new forNode();
   declareNode d;
  condNode c;
  blockNode b;
  modificationNode m;
    jj_consume_token(FOR);
    jj_consume_token(OPEN);
    d = declareSt();
    c = condition();
    jj_consume_token(END);
    m = incress_decress();
    jj_consume_token(CLOSE);
    jj_consume_token(41);
    b = block();
    jj_consume_token(42);
fr.addChild(d);
  fr.addChild(c);
  fr.addChild(m);
  fr.addChild(b);
  {if ("" != null) return fr;}
    throw new Error("Missing return statement in function");
}

  static final public doWhileNode doWhileSt() throws ParseException {doWhileNode wh = new doWhileNode();
  condNode c;
  blockNode b;
    jj_consume_token(DO);
    jj_consume_token(41);
    b = block();
    jj_consume_token(42);
    jj_consume_token(WHILE);
    c = condition();
    jj_consume_token(END);
wh.addChild(b);
  wh.addChild(c);
  {if ("" != null) return wh;}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_25()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_26()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_27()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_28()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_29()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_30()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_31()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_32()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_33()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_34()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_35()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_36()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_37()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_38()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_39()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_40()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_2_41(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_41()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  static private boolean jj_2_42(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_42()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  static private boolean jj_2_43(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_43()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  static private boolean jj_2_44(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_44()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  static private boolean jj_2_45(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_45()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  static private boolean jj_2_46(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_46()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  static private boolean jj_2_47(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_47()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  static private boolean jj_2_48(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_48()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(47, xla); }
  }

  static private boolean jj_3R_assignSt_375_3_9()
 {
    if (jj_scan_token(VAR)) return true;
    if (jj_scan_token(EQ)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_37()) {
    jj_scanpos = xsp;
    if (jj_3_38()) {
    jj_scanpos = xsp;
    if (jj_3_39()) {
    jj_scanpos = xsp;
    if (jj_3_40()) {
    jj_scanpos = xsp;
    if (jj_3_41()) return true;
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_33()
 {
    if (jj_scan_token(STR)) return true;
    return false;
  }

  static private boolean jj_3_9()
 {
    if (jj_scan_token(BOOL)) return true;
    return false;
  }

  static private boolean jj_3_8()
 {
    if (jj_scan_token(STR)) return true;
    return false;
  }

  static private boolean jj_3_7()
 {
    if (jj_scan_token(VAR)) return true;
    return false;
  }

  static private boolean jj_3_6()
 {
    if (jj_scan_token(INT)) return true;
    return false;
  }
